# NexusBI

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-backend.yml  ci-dbt.yml  ci-frontend.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: __init__.py  health.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  auth_dto.py
backend/app/application/services/: __init__.py  interfaces.py
backend/app/application/use_cases/: __init__.py  login_user.py  logout_user.py  oauth_login.py  refresh_token.py  register_user.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py  settings.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  permission.py  role.py  session.py  user.py
backend/app/domain/repositories/: __init__.py  session_repository.py  user_repository.py
backend/app/infrastructure/: __init__.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/unit/: test_config.py  test_exceptions.py  test_logging.py  test_middleware.py
config/: error_codes.yaml  feature_flags.yaml  rate_limits.yaml
config/envs/: .env.development  .env.staging  .env.template  .env.testing
dbt/: README.md
deploy/: README.md
deployment/: docker-compose.yml
docs/architecture/: nexusbi_architecture_planning.md  phase1_section1_repository_blueprint.md  phase1_section2_database_blueprint.md  phase1_section3_api_blueprint.md  phase1_section4_ui_blueprint.md  phase2_1_repository_blueprint.md  phase2_2_data_warehouse_blueprint.md  phase2_3_api_service_blueprint.md  phase2_4_ai_intelligence_blueprint.md  phase2_5_product_experience_blueprint.md  phase2_8_enterprise_readiness_package.md  phase2_task1_architecture_review.md  (+6 more)
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: BUILD_ID  (+5 more)
(+37 files in other folders)
