[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusbi-backend"
version = "1.0.0"
description = "Enterprise Analytics Copilot Backend Service"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "NexusBI Engineering", email = "engineering@nexusbi.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Private :: Do Not Upload",
]

dependencies = [
    "fastapi>=0.115.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.2",
    "dependency-injector>=4.41.0",
    "psycopg2-binary>=2.9.9",
    "snowflake-connector-python>=3.12.1",
    "snowflake-snowpark-python>=1.22.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "pandas>=2.2.0",
    "polars>=1.6.0",
    "pyarrow>=17.0.0",
    "numpy>=2.1.0",
    "plotly>=5.24.0",
    "openai>=1.43.0",
    "sqlglot>=25.15.0",
    "websockets>=13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.1",
    "ruff>=0.6.4",
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
